# fedauth

./: LICENSE  MANIFEST.in  README.md  pyptoject.toml  pytest.ini  requirements-test.txt  setup.cfg
.github/workflows/: ci.yml
docs/: api_strucure.md  dynamic_admin.md  federated_admin.md  generic_admin.md  google_setup.md  keycloak_setup.md  okta_setup.md  settings_example.md  static_admin.md
src/fedauth/: admin.py  backends.py  base.py  constants.py  crypto.py  forms.py  mixins.py  models.py  urls.py  utils.py  validators.py  views.py
src/fedauth/dynamic_oidc/: urls.py  views.py
src/fedauth/federated_oidc/: admin.py  models.py  urls.py  views.py
src/fedauth/federated_providers/: admin.py  constants.py  models.py  urls.py  utils.py  views.py
src/fedauth/frontend_oidc/: urls.py  utils.py
src/fedauth/generic_oidc/: admin.py  models.py  views.py
src/fedauth/migrations/: 0001_initial.py  0002_alter_federatedprovider_client_id_and_more.py  0003_rename_federatedprovider_dynamicprovider_and_more.py
src/fedauth/oidc_admin/: forms.py  urls.py  views.py
src/fedauth/static_oidc/: views.py
tests/: base.py  factories.py
tests/fedauth/: test_auth_backend.py  test_base.py  test_crypto.py  test_endpoints.py  test_forms.py  test_utils.py  test_validators.py  test_views.py
tests/fedauth/dynamic_oidc/: test_admin.py  test_fed_endpoints.py  test_fed_views.py
tests/fedauth/federated_oidc/: test_admin.py  test_fed_endpoints.py  test_fed_views.py
tests/fedauth/frontend_oidc/: test_api.py
tests/project/: settings.py  urls.py
tests/project/oidc/jumpcloud/: auth.py  (+1 more)
(+10 files in other folders)
