[metadata]
name = fedauth
description = OIDC authentication backend for Django applications

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.11
package_dir =
    =src
packages =
    fedauth
install_requires =
    django >= 4.2, < 5.0
    djangorestframework >=3.15
    djangorestframework-simplejwt >=5.3
    django-redis >= 5.4
    mozilla-django-oidc
    python-dotenv

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-django
    pytest-env
    flake8
    factory-boy

[flake8]
exclude = build,migrations,dist,venv,env,.eggs
max-line-length = 160
max-complexity = 10
ignore =
# E731: do not assign a lambda expression, use a def
    E731
# missing placeholders on f-string
    F541
